# x07-device-host

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
arch/host_abi/: host_abi.snapshot.json
crates/x07-device-host-abi/: Cargo.toml
crates/x07-device-host-abi/src/: lib.rs
crates/x07-device-host-assets/: Cargo.toml
crates/x07-device-host-assets/assets/: bootstrap.js  index.html
crates/x07-device-host-assets/src/: lib.rs
crates/x07-device-host-desktop/: Cargo.toml
crates/x07-device-host-desktop/src/: main.rs  telemetry.rs
mobile/android/template/app/src/main/java/org/x07/deviceapp/: MainActivity.kt
mobile/ios/template/X07DeviceApp/: X07WebView.swift
releases/compat/: 0.1.0.json  0.1.1.json  0.1.2.json  0.1.3.json  0.1.4.json  0.1.5.json  0.1.6.json  0.1.7.json  0.2.0.json  0.2.1.json  0.2.2.json  0.2.3.json  0.2.4.json  0.2.5.json
scripts/: sync_web_ui_host.sh
scripts/ci/: check_phase10.sh  check_phase8.sh  check_phase8_assets.sh  check_phase9.sh  check_phase9_smoke.sh  check_release_ready.sh
scripts/release/: build-device-host-archive.sh  export-device-host-abi.sh  package-mobile-templates.sh
