[package]
name = "x07-device-host-abi"
version = "0.2.4"
edition = "2021"
license = "Apache-2.0"
description = "Pinned ABI snapshot for X07 device hosts."
repository = "https://github.com/x07lang/x07-device-host"
readme = "../../README.md"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"

x07-device-host-assets = { path = "../x07-device-host-assets", version = "0.2.4" }
