[package]
name = "x07-device-host-desktop"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Desktop system-WebView host for X07 device bundles."
repository = "https://github.com/x07lang/x07-device-host"
readme = "../../README.md"

[[bin]]
name = "x07-device-host-desktop"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
mime_guess = "2.0.5"
opentelemetry-proto = { version = "0.31.0", default-features = false, features = ["gen-tonic-messages", "logs", "prost", "with-serde"] }
prost = "0.14.3"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
rfd = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tao = "0.34.5"
wry = "0.54.1"

x07-device-host-abi = { path = "../x07-device-host-abi", version = "0.2.0" }
x07-device-host-assets = { path = "../x07-device-host-assets", version = "0.2.0" }
